fixed overflow issue in QueuedEventList

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -136,12 +136,11 @@ html, body {
 }
 
 .queued-event-list {
-  display: flex;
-  flex-direction: row;
   width: 100vw;
-  height: 65;
+  height: 65px;
   border-bottom: 2px solid #161616;
   padding: 0 5px;
+  overflow: hidden;
 }
 
 .pulse-animation {
